# smart-library

./: README.md  package-lock.json  package.json  pyproject.toml
app/: app.py  cleaned_books.csv  frontend.py  package-lock.json  read_books_file.py
app/books_vector_db/: chroma.sqlite3
app/books_vector_db/bfd01859-5bc4-435c-826e-b07a09fb1d22/: index_metadata.pickle
app/common/CRUD/: author_crud.py  book_crud.py  books_chroma_crud.py  userPrefrence.py  user_crud.py
app/common/database/: chromaDB.py  database.py  models.py
app/frontend/: books.html
app/frontend/scripts/: book.js
app/frontend/style/: book.css
app/middleware/: auth.py
app/routes/: books.py  preferences.py  users.py
app/schemas/: author.py  book.py  user.py
app/services/: agent.py  graph.py  model.py  ollama_model.py  read_books_file.py  search.py
app/test/2f0288e4-9cb8-4012-818a-8fd77f287724/: index_metadata.pickle
features/: extract images.txt
smart-library/: package-lock.json  package.json  tsconfig.json
smart-library/src/: App.css  App.module.css  App.tsx  index.js
smart-library/src/api/: fetch_books.ts  fetch_login.ts  fetch_preferences.ts  fetch_signup.ts  filter_books.ts  search_books.ts
smart-library/src/components/book_card/: book_card.css  book_card.module.css  book_card.tsx  liked_book.tsx
smart-library/src/services/: chat.ts  fetch_books.ts  fetch_liked_books.ts  fetch_preferences.ts  fetch_signup.ts  filter_books.ts  like_books.ts  search_books.ts
smart-library/src/types/: book.ts  header.ts  message.ts  pref.ts  user.ts
(+37 files in other folders)
