[tool.poetry]
name = "smart-bookstore"
version = "0.1.0"
description = ""
authors = ["Saleh <slxw191@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
python-jose = "^3.3.0"
pytest = "^8.2.2"
httpx = "^0.27.0"
pandas = "^2.2.2"
sentence-transformers = "^3.0.1"
langchain-chroma = "^0.1.2"
langchain-community = "^0.2.9"
langchain-huggingface = "^0.0.3"
langchain-openai = "^0.1.17"
langchain-mistralai = "^0.1.10"
langchain-ollama = "^0.1.0"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

